Delete Jobs Ready
